Updating JVM Args