@@ -17,7 +17,7 @@ sourceCompatibility = "11"
 targetCompatibility = "11"
 
 tasks.withType(JavaExec) {
-    jvmArgs = ['-Xms1024m', '-Xmx2048m', '-XX:+UseConcMarkSweepGC']
+    jvmArgs = ['-Xms1024m', '-Xmx2048m']
 }
 
 /*jar {
